Outliner missing redraw after "Set Parent (Without Inverse)" #81896

Closed
opened 2020-10-20 21:03:18 +02:00 by Hans Goudey · 4 comments
Member

System Information
Operating system: Linux-5.8.15-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28

Blender Version
Broken: version: 2.91.0 Alpha, latest master
Worked: 2.79? Sort of? It has a "Keep Transform" option that does properly refresh the outliner

Short description of error
The outliner does not redraw to show the new object hierarchy after using Set Parent (Without Inverse)

Exact steps for others to reproduce the error

  1. Duplicate default cube.
  2. Set parent without inverse
  3. Outliner doesn't redraw
  4. Re-select outliner, heirarchy is now drawn

outliner-no-redraw-2020-10-20_13.56.12.mp4

**System Information** Operating system: Linux-5.8.15-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28 **Blender Version** Broken: version: 2.91.0 Alpha, latest master Worked: 2.79? Sort of? It has a "Keep Transform" option that does properly refresh the outliner **Short description of error** The outliner does not redraw to show the new object hierarchy after using Set Parent (Without Inverse) **Exact steps for others to reproduce the error** 1. Duplicate default cube. 2. Set parent without inverse 3. Outliner doesn't redraw 4. Re-select outliner, heirarchy is now drawn [outliner-no-redraw-2020-10-20_13.56.12.mp4](https://archive.blender.org/developer/F9024083/outliner-no-redraw-2020-10-20_13.56.12.mp4)
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey changed title from Outliner missing redraw after to Outliner missing redraw after "Set Parent (Without Inverse)" 2020-10-20 21:03:50 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-21 10:51:17 +02:00

This issue was referenced by 23ec1f90e7

This issue was referenced by 23ec1f90e71b8c2a63f42811ab4a7729f005f265
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81896
No description provided.